Second Commit - Problem Comprehension

--- a/Capstone_Project_1_EDA_Play_Store_App_Review_Analysis.ipynb
+++ b/Capstone_Project_1_EDA_Play_Store_App_Review_Analysis.ipynb
@@ -95,6 +95,144 @@
       "metadata": {
         "id": "QTJD5vag8Ogh"
       }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# It's time to **HAVE FUN** with the **DATASET** now !!!!"
+      ],
+      "metadata": {
+        "id": "i2ZeVlrs97Cp"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#**1. Problem Comprehension :**"
+      ],
+      "metadata": {
+        "id": "TrUlcXGQ1fBq"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Let's begin with importing the required libraries.\n",
+        "import numpy as np\n",
+        "import pandas as pd\n",
+        "import seaborn as sns\n",
+        "import matplotlib.pyplot as plt\n",
+        "%matplotlib inline"
+      ],
+      "metadata": {
+        "id": "cpsf8Ne5_tUg"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Mounting google drive.\n",
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Jg_LSvm9Afe2",
+        "outputId": "eb2fc8c5-91fc-4b8d-ea5a-cb032c8f5fe8"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Mounted at /content/drive\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Defining the working path.\n",
+        "play_store_data_path = '/content/drive/MyDrive/Capstone Projects/Exploratory Data Analysis (EDA) :- Play Store App Review Analysis/Play Store Data.csv'\n",
+        "user_reviews_path = '/content/drive/MyDrive/Capstone Projects/Exploratory Data Analysis (EDA) :- Play Store App Review Analysis/User Reviews.csv'"
+      ],
+      "metadata": {
+        "id": "AFE5ucqsDY9o"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Loading dataframes of both CSV files.\n",
+        "play_store_data_df = pd.read_csv(play_store_data_path)\n",
+        "user_reviews_df = pd.read_csv(user_reviews_path)"
+      ],
+      "metadata": {
+        "id": "NGQoDj6gDrhg"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##**Dataset Description :**\n",
+        "##A. Play store Dataset\n",
+        "\n",
+        "This file contains data of the Play store applications. It contains 10,841 rows of data with different application names and following columns:\n",
+        "\n",
+        "**App**: It defines names of different applications to be reviewd.\n",
+        "\n",
+        "**Category:** Category of the application it belongs to such as family, game, beauty, business, entertainment, education...etc.\n",
+        "\n",
+        "**Rating:** Overall user rating of the application. The users have rated the app out of 5, with 1 being the lowest rating and 5 being the highest.\n",
+        "\n",
+        "**Reviews:** The number of user reviews each app has received.\n",
+        "\n",
+        "**Size:** The memory size needed to install the application.\n",
+        "\n",
+        "**Installs:** The number of times each application has been installed by users.\n",
+        "\n",
+        "**Type:** Tells about the Free or paid version of the app.\n",
+        "\n",
+        "**Price:** Notifies the price of the app.\n",
+        "\n",
+        "**Content Rating:** This column specifies the intended audience of the app such as teens, mature 21+, or everyone.\n",
+        "\n",
+        "**Genres:** The sub-category for each app. Example: for the Education category, this could be Education: Pretend Play, for example.\n",
+        "\n",
+        "**Last Updated:** Release date of the most recent update for the app.\n",
+        "\n",
+        "**Current Ver:** The app's current version.\n",
+        "\n",
+        "**Android Ver:** The oldest version of Android OS supported by the app.\n",
+        "\n",
+        "##B. User Reviews Dataset\n",
+        "This dataset contains the result of the sentiment analysis. It has 64,295 rows of data with the following additional attributes: \n",
+        "\n",
+        "**App:** Name of the applications.\n",
+        "\n",
+        "**Translated_Review:** Either the original review in English, or a translated version if the orignal review is in another language. \n",
+        "\n",
+        "Moreover, the text in each review was pre-processed and attributed with three new features.\n",
+        "\n",
+        "**Sentiment:** The result of the sentiment analysis conducted on a review dataset. The value is either Positive, Neutral, or Negative.\n",
+        "\n",
+        "**Sentiment_Polarity:** Sentiment polarity is a value indicating the positivity or negativity of the sentiment. It ranges from -1 (most negative) to 1 (most positive).\n",
+        "\n",
+        "**Sentiment_Subjectivity:** Sentiment Subjectivity is a value ranging from 0 to 1, which indicates the subjectivity of the review. Here, lower values indicate the review which is based on factual information, and higher values indicate the review that is based on personal opinions, public opinions or judgements."
+      ],
+      "metadata": {
+        "id": "6pQ4pouSH9XP"
+      }
     }
   ]
 }
