Sixth Commit - Conclusion

--- a/Capstone_Project_1_EDA_Play_Store_App_Review_Analysis.ipynb
+++ b/Capstone_Project_1_EDA_Play_Store_App_Review_Analysis.ipynb
@@ -7225,6 +7225,86 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#**5. Conclusion :**"
+      ],
+      "metadata": {
+        "id": "kHF6dSvEZ5FP"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Exploratory Data Analysis and Visualization is very helpful in gathering insights about data in hand specially when we have no clue about what information lies within our dataset. This analysis has resulted in better understanding of App popularity, rating, performance and many more aspects such as,\n",
+        "\n",
+        "**1.Rating**\n",
+        "*   Most of the apps have rating in between 4.0 and 5.0.\n",
+        "*   Most numbers of apps are rated at 4.3\n",
+        "*   All categories of apps have more than 4 average rating.\n",
+        "\n",
+        "**2.Size**\n",
+        "*   Maximum number of applications present in the dataset are of small size.\n",
+        "*   Most installed apps size is in between 0 to 20 MB.\n",
+        "*   On average the application size is in between 10 MB to 30 MB.\n",
+        "\n",
+        "**3.Installs**\n",
+        "*   Majority of the apps come into these three categories, Family, Game, and Tools.\n",
+        "*   Maximum number of apps present in google play store come under Family, Game and tools but as per the installation and requirement in the market plot, scenario is not the same. Maximum installed apps comes under Game, Communication, Productivity and Social.\n",
+        "*   Subway Surfers, Facebook, Messenger and Google Drive are the most installed apps.\n",
+        "\n",
+        "**4.Type(Free/Paid)**\n",
+        "\n",
+        "*  About 92% apps are free and 8% apps are of paid type.\n",
+        "*  The category ‘Family’ has the highest number of paid apps.\n",
+        "*  The app “I’m Rich — Trump Edition” from the category ‘Lifestyle’ is the most costly app priced at $400\n",
+        "\n",
+        "**5.Content Rating**\n",
+        "*   Content having Everyone only has most installs, while unrated and Adults only 18+ have less installs.\n",
+        "*   81.10% apps has Everyone content rating\n",
+        "\n",
+        "**6.Reviews**\n",
+        "*   Number of installs is positively correlated with reviews with correlation.\n",
+        "\n",
+        "**7.Sentiment**\n",
+        "*   Most of the reviews are of Positive Sentiment, while Negative and Neutral have low number of reviews.\n",
+        "*   Overall sentiment count of merged dataset in which Positive sentiment count is 64%, Negative 22% and Neutral 13%.\n",
+        "\n",
+        "**8.Sentiment Polarity / Sentiment Subjectivity**\n",
+        "*   Collection of reviews shows a wide range of subjectivity and most of the reviews fall in [-0.50,0.75] polarity scale implying that the extremely negative or positive sentiments are significantly low.\n",
+        "*   Most of the reviews show a mid-range of negative and positive sentiments.\n",
+        "*   Sentiment subjectivity is not always proportional to sentiment polarity but in maximum number of case, shows a proportional behavior, when variance is too high or low\n",
+        "*   Sentiment Polarity is not highly correlated with Sentiment Subjectivity."
+      ],
+      "metadata": {
+        "id": "uqrRkgbS5Y4J"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "The analysis of Google Play Store application aided to build most reliable and more interactive applications. This would be very useful for app developers to build an application focussed on certain discussed category in this analysis. This analysis will definitely help in building the application with precise and accurate objectives."
+      ],
+      "metadata": {
+        "id": "ni1DbFgS9MVN"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##**Challenges Faced :**\n",
+        "1. The data sets were considerable small in size but they were having lots of nulls particular in first dataset(Play store app Review).\n",
+        "2. We have faced an outlier. which was considerable out of range hence able to detect and dropped with ease.\n",
+        "3. Most of the data were in string type which should be in int or in float type in general. Also in these string type there were few special characters like “+”,”$” “M” ”k” which were replaced and removed out with special operation on them.\n",
+        "4. Some nulls which we  generated during our data manipulation from them we decided which need to be adjusted and which need to be dropped using simple operation and logic. \n",
+        "5. We have faced lots of duplicates which we dropped which could have really messed up our exploratory part.\n",
+        "6. It was difficult for us to choose between which tool we should use for data visualization. We preferred the most challenging one “seaborn” worked upon it implemented it in our code and even helped each in understanding the codes and operations like an ideal team should do."
+      ],
+      "metadata": {
+        "id": "gDJYq6I781lw"
+      }
     }
   ]
 }
